build: refresh name.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ospf-multiarray"
+name = "ospf_rust_multiarray"
 version = "0.1.0"
 edition = "2021"
 authors = ["fuookami <fuookami@163.com>"]
@@ -7,7 +7,7 @@ description = "A multi-array utils for ospf-rust."
 license = "MIT OR Apache-2.0"
 
 [dependencies]
-ospf-meta_programming = { git = "https://github.com/fuookami/ospf-rust-meta-programming.git" }
+ospf_rust_meta_programming = { git = "https://github.com/fuookami/ospf-rust-meta-programming.git" }
 
 [profile.dev]
 opt-level = 0
